Added  User-Service, API and ServiceImpl